Added Create game tests and a List Games unauthorized failure test